<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">AccessMRS</string>
    <string name="app_version">1.0.3</string>
    <string name="app_package_name">com.alphabetbloc.accessmrs</string>
    <string name="app_provider_authority">com.alphabetbloc.accessmrs.providers.dbprovider</string>
    <string name="app_account_type">com.alphabetbloc.accessmrs.account</string>
    <string name="key_server">server</string>
    <string name="key_username">username</string>
    <string name="key_password">password</string>
    <string name="key_encryption_key">encryption_key</string>
    <string name="key_encryption_password">encryption_password</string>
    <string name="key_saved_search">saved_search</string>
    <string name="key_program">program</string>
    <string name="key_provider">provider</string>
    <string name="key_location">location</string>
    <string name="key_first_run">first_run</string>
    <string name="key_use_saved_searches">use_saved_searches</string>
    <string name="key_client_auth">client_authentication</string>
    <string name="key_show_settings_menu">show_settings_menu</string>
    <string name="key_enable_activity_log">enable_activity_log</string>
    <string name="key_min_refresh_seconds">minimum_refresh_time</string>
    <string name="key_max_refresh_seconds">maximum_refresh_time</string>
    <string name="key_show_form_prompt">show_form_prompt</string>
    <string name="key_max_consent_time">maximum_consent_time</string>
    <string name="key_clear_consent_time">clear_consent_time</string>
    <string name="key_request_consent">request_client_consent</string>
    <string name="key_kosirai_rct">kosirai_rct</string>
    <string name="default_server">https://41.57.100.6:8443/amrs</string>
    <string name="default_username">JGreen</string>
    <string name="default_password">Password2012</string>
    <string name="default_provider">1</string>
    <string name="default_program">1</string>
    <string name="default_saved_search">1</string>
    <string name="default_use_saved_searches">true</string>
    <string name="default_show_form_prompt">true</string>
    <string name="default_show_settings_menu">true</string>
    <string name="default_enable_activity_logging">true</string>
    <string name="default_use_client_auth">false</string>
    <string name="default_min_refresh_seconds">60</string>
    <string name="default_max_refresh_seconds">620</string>
    <string name="default_location">1</string>
    <string name="default_max_consent_time">62000</string>
    <string name="default_clear_consent_time">6200000</string>
    <string name="default_request_consent">true</string>
    <string name="default_kosirai_rct">control</string>
    <string name="account_admin_section_title">Account Settings</string>
    <string name="account_admin_settings">Administrator Settings</string>
    <string name="account_admin_settings_summary">Server Setup, SSL, User Interface, etc.</string>
    <string name="account_change_username_password">Change Username or Password</string>
    <string name="account_change_details">Edit Account Details</string>
    <string name="account_setup_complete">Setup Complete</string>
    <string name="account_password_reminder">Please Remember Your Password: \n\n  %s</string>
    <string name="pref_user_settings">User Settings</string>
    <string name="pref_settings">Settings</string>
    <string name="pref_admin_settings">Manage</string>
    <string name="pref_manage_device_pref">Device Management</string>
    <string name="pref_enable_activity_logging">Activity Logging</string>
    <string name="pref_activity_logging_on">Log forms loaded for each client</string>
    <string name="pref_activity_logging_off">Do not log user activity</string>
    <string name="pref_show_settings_menu">Settings Menu</string>
    <string name="pref_show_menu_on">Allow user access to this device administrator settings menu</string>
    <string name="pref_show_menu_off">Hide this device administrator menu from users</string>
    <string name="pref_change_server">Change URL</string>
    <string name="pref_use_saved_search">Dynamic Cohorts</string>
    <string name="pref_saved_search_on">Use Dynamic Cohorts with OpenMRS Saved Searches</string>
    <string name="pref_saved_search_off">Use Static Cohorts from OpenMRS</string>
    <string name="pref_server">Server</string>
    <string name="pref_saved_search">Cohort or Search ID</string>
    <string name="pref_change_saved_search">Change Cohort or Search ID</string>
    <string name="pref_program">Program</string>
    <string name="pref_change_program">Change Program</string>
    <string name="pref_min_refresh_seconds">Don\'t sync if data was updated in last (seconds)</string>
    <string name="pref_max_refresh_seconds">Sync with server if data is older than (seconds)</string>
    <string name="pref_consent_settings">Client Informed Consent</string>
    <string name="pref_max_consent_time">Renew consent if consent is older than (seconds):</string>
    <string name="pref_max_consent">Renew Consent After</string>
    <string name="pref_clear_consent">Delete Old Consents</string>
    <string name="pref_clear_consent_time">Delete a recorded consent signature from database if consent is older than (seconds)</string>
    <string name="pref_min_refresh">Don\'t Sync Before</string>
    <string name="pref_location">Location</string>
    <string name="pref_change_location">Change Location</string>
    <string name="pref_location_prefix">Current Location ID:  </string>
    <string name="pref_max_refresh">Sync Data After</string>
    <string name="pref_provider">Provider</string>
    <string name="pref_change_provider">Change Provider</string>
    <string name="pref_provider_prefix">Current Provider ID:  </string>
    <string name="pref_program_prefix">Current Program ID:  </string>
    <string name="pref_savedsearch_prefix">Current Cohort ID:  </string>
    <string name="pref_not_a_positive_int">This entry must be a positive integer. Please try again.</string>
    <string name="pref_min_requirement">The value must be greater than the \'don\'t refresh before\ setting.</string>
    <string name="pref_max_requirement">This value must be less than the \'sync after\' setting.</string>
    <string name="pref_wipe_all_data">Reset Databases</string>
    <string name="pref_wipe_data_desc">Wipe all existing data from phone and reset to default settings</string>
    <string name="pref_form_prompt">Form Confirmation</string>
    <string name="pref_form_prompt_on">Ask for user confirmation before loading a new form.</string>
    <string name="pref_form_prompt_off">Load new forms directly.</string>
    <string name="pref_request_consent">Request Client Consent</string>
    <string name="pref_request_consent_on">Ask client for consent with signature before allowing provider access to client data.</string>
    <string name="pref_request_consent_off">Do not require provider to obtain client consent to view client data.</string>
    <string name="pref_not_allowed">Value not allowed</string>
    <string name="alert_title_first_warning">WARNING !!!</string>
    <string name="alert_odk_body_first_warning">This will ERASE ALL patient data ever collected on this device. \n \n Are you sure?</string>
    <string name="alert_wipe_body_first_warning">This will ERASE ALL DATA on this device!! \n \n ALL patient data, all contacts, and all calendars will be erased, but data on the SD Card will remain. The device will then reset to factory settings and guide user to set up new password and provider ID.  \n \n Are you sure you want to do this? \n \n</string>
    <string name="alert_ok_button">ERASE ALL DATA</string>
    <string name="alert_first_cancel_button">Not sure, Keep Data</string>
    <string name="alert_title_second_warning">WARNING ! WARNING ! WARNING ! WARNING !</string>
    <string name="alert_odk_body_second_warning">Once erased, you CAN NEVER retreive this data! \n \n Are you absolutely sure you want to erase all patient data?</string>
    <string name="alert_wipe_body_second_warning">Once erased, you CAN NEVER retreive this data! \n \n Are you absolutely sure you want to reset device?</string>
    <string name="alert_second_cancel_button">Not Sure, Keep Data For Now</string>
    <string name="nothing_erased">Nothing has been erased, and no changes have been made to the device.</string>
    <string name="wiping_data">! Erasing Data Now !</string>
    <string name="wiping_data_error_title">Database Error</string>
    <string name="wiping_data_successful_title">Database Reset</string>
    <string name="wiping_data_successful">All data has been erased and settings have been set to defaults.</string>
    <string name="wiping_data_error">Sorry, there was an error wiping the data. Please try again.</string>
    <string name="ssl_server_settings">Server Settings</string>
    <string name="ssl_test_ssl">Test SSL Connections</string>
    <string name="ssl_use_client_auth">Client Authentication</string>
    <string name="ssl_client_auth_on">Use Client Authentication</string>
    <string name="ssl_client_auth_off">Do not use Client Authentication</string>
    <string name="ssl_client_auth">Client Authentication</string>
    <string name="ssl_client_auth_desc">Manage Authentication Keys</string>
    <string name="ssl_manage_certs">Manage Certificates</string>
    <string name="ssl_manage_certs_desc">Add or Remove Server Certificates</string>
    <string name="ssl_store_title">Manage %ss</string>
    <string name="ssl_add_success_message">Added %1$d %2$s(s) to local %3$s store.</string>
    <string name="ssl_add_alert_message">No %1$ss found.  Please place a %2$s in DER format on the SD Card.</string>
    <string name="ssl_error_message">Error manipulating local %s store: </string>
    <string name="ssl_remove_success_message">Removed %1$d %2$s(s) from local %3$s store.</string>
    <string name="ssl_remove_alert_message">There was a problem removing this %s.</string>
    <string name="ssl_add_alert_title">Add A New %s</string>
    <string name="ssl_add_alert_body">To add a new %1$s, please add the %2$s in %3$s format to the SD Card.</string>
    <string name="ssl_remove_alert_title">Remove %s</string>
    <string name="ssl_remove_alert_body">You are about to remove the %s of: \n\n</string>
    <string name="ssl_cert_domain">Domain:</string>
    <string name="ssl_cert_location">Location:</string>
    <string name="ssl_cert_division">Division:</string>
    <string name="ssl_cert_issued_by">Issued By:</string>
    <string name="ssl_cert_filename">File Name:</string>
    <string name="ssl_cert_file_modified">File Modified:</string>
    <string name="ssl_connect">Connect</string>
    <string name="ssl_cert_email">Email:</string>
    <string name="ssl_test_success">Success! Connected to Server.</string>
    <string name="ssl_test_failure">Unable to Connect to Server.</string>
    <string name="sql_verify_pwd">Enter your passphrase:</string>
    <string name="sql_set_sqlcipher_pwd">Please enter a secure password for your database.</string>
    <string name="auth_server_username">Username</string>
    <string name="auth_server_password">Password</string>
    <string name="icon">Small Icon</string>
    <string name="icon_app">Application Icon</string>
    <string name="icon_add_client">Add Client Icon</string>
    <string name="icon_arrow_forward">Arrow Forward Icon</string>
    <string name="consent_accept">Accept</string>
    <string name="consent_decline">Decline</string>
    <string name="consent_cancel">Ask Later</string>
    <string name="consent_return">Return To Summary</string>
    <string name="consent_revoke">Withdraw Consent</string>
    <string name="consent_request_signature">Ask client to sign name here:</string>
    <string name="add_new_client">Add New Client</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
</resources>