<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/account_admin_section_title" />

    <Preference
        android:key="acccount_user_details"
        android:summary="@string/account_change_username_password"
        android:title="@string/account_change_details" >
        <intent
            android:targetClass="com.alphabetbloc.clinic.ui.admin.AccountSetupActivity"
            android:targetPackage="@string/app_package_name" />
    </Preference>
    <Preference
        android:key="acccount_admin_settings"
        android:summary="@string/account_admin_settings_summary"
        android:title="@string/account_admin_settings" >
        <intent
            android:targetClass="com.alphabetbloc.clinic.ui.admin.PreferencesActivity"
            android:targetPackage="@string/app_package_name" />
    </Preference>

</PreferenceScreen>