<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingTop="20dp" >

    <ImageView
        android:contentDescription="@string/icon_app"
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:padding="5dip"
        android:src="@drawable/openmrs_sync" />

    <TextView
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icon"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingBottom="10dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instruction"
        android:layout_centerHorizontal="true"
        android:hint="@string/auth_server_username"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="10dp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_username"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"
        android:hint="@string/auth_server_password"
        android:layout_marginRight="10dp"
        android:inputType="textPassword" >
    </EditText>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:textSize="20dp"
        android:text="@string/submit" />

    <ProgressBar
        android:id="@+id/progress_wheel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminate="true"
        android:visibility="gone" />

</RelativeLayout>