<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <include
        android:id="@+id/patient_info"
        layout="@layout/patient_header" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/consent_bitmap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/icon_app"
                android:padding="5dip" />

            <RelativeLayout
                android:id="@+id/button_row"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="2dip"
                android:paddingLeft="3dip"
                android:paddingRight="3dip"
                android:paddingTop="2dip" >

                <Button
                    android:id="@+id/consent_return"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@+id/center_image"
                    android:padding="10dip"
                    android:text="@string/consent_return"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/center_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/icon" />

                <Button
                    android:id="@+id/consent_revoke"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@+id/center_image"
                    android:padding="10dip"
                    android:text="@string/consent_revoke"
                    android:textSize="18sp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>