<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_client"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_selector_background"
    android:clickable="true"
    android:orientation="vertical" >

    <ImageView
        android:contentDescription="@string/icon_add_client"
        android:id="@+id/add_client_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginLeft="5dip"
        android:layout_marginTop="10dip"
        android:paddingLeft="6dip" 
        android:src="@drawable/add_client">
    </ImageView>
    
    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/arrow_image"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/add_client_image"
        android:paddingLeft="8dip"
        android:textColor="@color/dark_gray"
        android:text="@string/add_new_client"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
         android:contentDescription="@string/icon_arrow_forward"
        android:id="@+id/arrow_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:paddingLeft="6dip"
        android:src="@drawable/arrow_gray" >
    </ImageView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/arrow_image"
        android:background="@color/medium_gray" />

</RelativeLayout>
